sfSandBoxCode/force-app/main/default/objects/Work_Order__c/fields/Actual_Issued_Material_Cost__c.field-meta.xml
<CustomField>
    <fullName>Actual_Issued_Material_Cost__c</fullName>
    <label>Actual Issued Material Cost</label>
    <summarizedField>Work_Order_Item__c.Actual_Material_Cost__c</summarizedField>
    <summaryForeignKey>Work_Order_Item__c.Work_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>