sfSandBoxCode/force-app/main/default/objects/Work_Order__c/fields/Dimension_2__c.field-meta.xml
<CustomField>
    <fullName>Dimension_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dimension 2</label>
    <referenceTo>c2g__codaDimension2__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>