sfSandBoxCode/force-app/main/default/objects/Work_Order__c/fields/Firm_Date__c.field-meta.xml
<CustomField>
    <fullName>Firm_Date__c</fullName>
    <label>Firm Date</label>
    <type>Date</type>
</CustomField>