sfSandBoxCode/force-app/main/default/objects/Work_Order__c/fields/Firmed__c.field-meta.xml
<CustomField>
    <fullName>Firmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Firmed?</label>
    <type>Checkbox</type>
</CustomField>