sfSandBoxCode/force-app/main/default/objects/Work_Order__c/fields/Inventory_Item__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Inventory Item</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Inventory Item doesn&#39;t have BOM</errorMessage>
        <filterItems>
            <field>Inventory_Item__c.Has_BOM__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Inventory_Item__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>