sfSandBoxCode/force-app/main/default/objects/Work_Order__c/fields/Inventory_Item_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item_Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Quantity to Manufacture</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>