sfSandBoxCode/force-app/main/default/objects/Work_Order__c/fields/Issue_Status__c.field-meta.xml
<CustomField>
    <fullName>Issue_Status__c</fullName>
    <label>Issue Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unissued</fullName>
                <default>true</default>
                <label>Unissued</label>
            </value>
            <value>
                <fullName>Partial Issuance</fullName>
            </value>
            <value>
                <fullName>Complete Issuance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>