sfSandBoxCode/force-app/main/default/objects/Work_Order__c/fields/Issue_Variance__c.field-meta.xml
<CustomField>
    <fullName>Issue_Variance__c</fullName>
    <description>Reason for the Issue Variance</description>
    <inlineHelpText>Reason for the Issue Variance</inlineHelpText>
    <label>Issue Variance</label>
    <type>TextArea</type>
</CustomField>