sfSandBoxCode/force-app/main/default/objects/Work_Order__c/fields/Labor_Cost__c.field-meta.xml
<CustomField>
    <fullName>Labor_Cost__c</fullName>
    <label>Labor Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>