sfSandBoxCode/force-app/main/default/objects/Work_Order__c/fields/Material_Cost__c.field-meta.xml
<CustomField>
    <fullName>Material_Cost__c</fullName>
    <label>Planned Material Cost</label>
    <summarizedField>Work_Order_Item__c.Planned_Cost__c</summarizedField>
    <summaryForeignKey>Work_Order_Item__c.Work_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>