sfSandBoxCode/force-app/main/default/objects/Work_Order__c/fields/Pending_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Pending_Quantity__c</fullName>
    <formula>Inventory_Item_Quantity__c  -  Received_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>