sfSandBoxCode/force-app/main/default/objects/Work_Order__c/fields/Receipt_Status__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Status__c</fullName>
    <formula>IF( Received_Quantity__c  = 0, &#39;No Receipts&#39;, IF( (Received_Quantity__c   &gt;  0)  &amp;&amp;  (Received_Quantity__c  &lt;  Inventory_Item_Quantity__c) , &#39;Partial Receipts&#39;, &#39;Full Receipts&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receipt Status</label>
    <type>Text</type>
</CustomField>