sfSandBoxCode/force-app/main/default/objects/Work_Order__c/fields/Receipt_Variance__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Variance__c</fullName>
    <description>Reason for the Receipt Variance</description>
    <inlineHelpText>Reason for the Receipt Variance</inlineHelpText>
    <label>Receipt Variance</label>
    <type>TextArea</type>
</CustomField>