sfSandBoxCode/force-app/main/default/objects/Work_Order__c/fields/Received_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Received_Quantity__c</fullName>
    <label>Received Quantity</label>
    <summarizedField>Work_Order_Receipts__c.Receive_Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Work_Order_Receipts__c.Primary_Item_in_Work_Order__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Work_Order_Receipts__c.Work_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>