sfSandBoxCode/force-app/main/default/objects/Work_Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Work Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Firmed</fullName>
            </value>
            <value>
                <fullName>Work in progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Issued</fullName>
                <isActive>false</isActive>
                <label>Issued</label>
            </value>
            <value>
                <fullName>Picklist Generated</fullName>
                <isActive>false</isActive>
                <label>Picklist Generated</label>
            </value>
            <value>
                <fullName>Received</fullName>
                <isActive>false</isActive>
                <label>Received</label>
            </value>
            <value>
                <fullName>received_partially</fullName>
                <isActive>false</isActive>
                <label>Received Partially</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>