sfSandBoxCode/force-app/main/default/objects/Work_Order__c/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <formula>Inventory_Item__r.Inventory_UoM__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UOM</label>
    <type>Text</type>
</CustomField>