sfSandBoxCode/force-app/main/default/objects/Work_Order__c/fields/WO_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>WO_Due_Date__c</fullName>
    <label>WO Due Date</label>
    <type>Date</type>
</CustomField>