sfSandBoxCode/force-app/main/default/objects/Work_Order__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <label>Work Order Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>