sfSandBoxCode/force-app/main/default/objects/Work_Order__c/fields/Work_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Type__c</fullName>
    <label>Work Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WO-Service</fullName>
            </value>
            <value>
                <fullName>WO-Manufactured</fullName>
            </value>
            <value>
                <fullName>WO-Disassembly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>