sfSandBoxCode/force-app/main/default/objects/Work_Order__c/recordTypes/After_Firm.recordType-meta.xml
<RecordType>
    <fullName>After_Firm</fullName>
    <active>true</active>
    <description>Record type after Firm</description>
    <label>After Firm</label>
</RecordType>