sfSandBoxCode/force-app/main/default/objects/Work_Order__c/recordTypes/Before_Firm.recordType-meta.xml
<RecordType>
    <fullName>Before_Firm</fullName>
    <active>true</active>
    <description>Record type before firm</description>
    <label>Before Firm</label>
</RecordType>