sfSandBoxCode/force-app/main/default/objects/Work_Order__c/recordTypes/WO_Receive.recordType-meta.xml
<RecordType>
    <fullName>WO_Receive</fullName>
    <active>true</active>
    <label>WO Receive</label>
</RecordType>