sfSandBoxCode/force-app/main/default/objects/Work_Order__c/validationRules/Validate_Work_Order_Company.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Work_Order_Company</fullName>
    <active>true</active>
    <description>Validate Work Order Company</description>
    <errorConditionFormula>Company__r.Id &lt;&gt; Inventory_Item__r.Item_Company__r.Id</errorConditionFormula>
    <errorDisplayField>Company__c</errorDisplayField>
    <errorMessage>Work Order company does not match the company of the item selected</errorMessage>
</ValidationRule>